--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Simple knowldgebase app\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C\u001b[C\u001b[Ce\u001b[C\u001b[C\u001b[D\u001b[Ddgebase  \u001b[2~app",
   "main": "app.js",
   "scripts": {
-    "start": "node app"
+    "start": "nodemon app"
   },
   "author": "Rohan Sonawane",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "express": "^4.16.2",
@@ -17,9 +18,14 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "mongoose": "^5.0.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4",
-    "save": "^2.3.2"
+    "save": "^2.3.2",
+    "underscore": "^1.13.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
