--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^4.3.0",
     "mongoose": "^5.0.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4",
